module(name = "clickhouse-datasource")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.gazelle_override(
    path = "github.com/hashicorp/go-plugin",
    directives = [
        "gazelle:proto disable",
    ],
)
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_clickhouse_clickhouse_go_v2", "com_github_docker_docker", "com_github_docker_go_units", "com_github_elazarl_goproxy", "com_github_grafana_grafana_plugin_sdk_go", "com_github_grafana_sqlds_v2", "com_github_paulmach_orb", "com_github_pkg_errors", "com_github_shopspring_decimal", "com_github_spf13_cobra", "com_github_stretchr_testify", "com_github_testcontainers_testcontainers_go", "io_dagger_dagger", "org_golang_x_net")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.1")

bazel_dep(name = "aspect_rules_js", version = "1.39.1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = ["//:package.json"],
    pnpm_lock = "//:pnpm-lock.yaml",
    preupdate = ["//:transform_package_json.js"],
    quiet = False,
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
    yarn_lock = "//:yarn.lock",
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_webpack", version = "0.14.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.19.0")