load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pkg_lib",
    srcs = ["main.go"],
    importpath = "github.com/grafana/clickhouse-datasource/pkg",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/plugin",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/datasource",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/log",
    ],
)

go_binary(
    name = "pkg",
    embed = [":pkg_lib"],
    visibility = ["//visibility:public"],
)
