load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "plugin",
    srcs = [
        "datasource.go",
        "driver.go",
        "errors.go",
        "settings.go",
    ],
    importpath = "github.com/grafana/clickhouse-datasource/pkg/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/converters",
        "//pkg/macros",
        "@com_github_clickhouse_clickhouse_go_v2//:clickhouse-go",
        "@com_github_grafana_grafana_plugin_sdk_go//backend",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/instancemgmt",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/log",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/proxy",
        "@com_github_grafana_grafana_plugin_sdk_go//build",
        "@com_github_grafana_grafana_plugin_sdk_go//data",
        "@com_github_grafana_grafana_plugin_sdk_go//data/sqlutil",
        "@com_github_grafana_sqlds_v2//:sqlds",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_net//proxy",
    ],
)

go_test(
    name = "plugin_test",
    srcs = [
        "driver_test.go",
        "settings_test.go",
    ],
    embed = [":plugin"],
    deps = [
        "//pkg/converters",
        "@com_github_clickhouse_clickhouse_go_v2//:clickhouse-go",
        "@com_github_docker_docker//api/types/container",
        "@com_github_docker_go_units//:go-units",
        "@com_github_elazarl_goproxy//:goproxy",
        "@com_github_grafana_grafana_plugin_sdk_go//backend",
        "@com_github_grafana_grafana_plugin_sdk_go//backend/proxy",
        "@com_github_grafana_grafana_plugin_sdk_go//data",
        "@com_github_grafana_grafana_plugin_sdk_go//data/sqlutil",
        "@com_github_grafana_sqlds_v2//:sqlds",
        "@com_github_shopspring_decimal//:decimal",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)
